--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "8.6.0",
     "mongodb": "^5.0.0",
     "next": "13.1.6",
     "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.51.0"
   }
 }
